src/app/footer/footer.component.scss
footer {
    .developer {
        text-decoration: none;

        &:hover {
            text-decoration: underline;
        }
    }
    .fa-linkedin,
    .fa-twitter-square,
    .fa-google-plus {
        font-size: 1.5em;
    }

    .nav {
        margin-top: 10px;

        a {
            text-decoration: none;
            margin-right: 10px;
            cursor: pointer;

            &:hover {
                text-decoration: underline;
            }
        }
    }
}

